--- a/index.html
+++ b/index.html
@@ -209,17 +209,13 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm Competetive Programmer from Manit Bhopal,Throughout my school & college experience, I consistently showcased a blend of
+         intelligence and oratory skills that set me apart.  Whether it was participating in debates, delivering presentations, 
+            or representing my school at various forums, I always endeavored to communicate effectively and persuasively.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            
           </p>
         </section>
 
